--- a/bartaz/index.html
+++ b/bartaz/index.html
@@ -145,7 +145,7 @@
     right around the corner of this tag ;)
     
 -->
-<div id="impress">
+<div id="impress" data-perspective="0" data-transition-duration="1000">
 
     <!--
         
