Change some size constants.

--- a/bartaz/test2.html
+++ b/bartaz/test2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div id="impress">
+<div id="impress" data-transition-duration="4000">
     <div id="bored" class="step slide" data-x="-500" data-y="-750">
         <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
     </div>
