--- a/demo.html
+++ b/demo.html
@@ -39,7 +39,7 @@
     </div>
 	
 	<div class="step" data-x="800" data-y="1600" data-rotate="90" data-scale="1">
-        <p>charts <img src="D:/Dropbox/GitHub/infographics/gifs/pie_chart.gif" width="200" height="200"/></p>
+        <p>charts <img src="./gifs/pie_chart.gif" width="200" height="200"/></p>
     </div>
 
 
