Added js generation layer.

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <link href="css/impress-demo.css" rel="stylesheet" />
 </head>
 <body>
-<div id="impress">
+<div id="impress" data-transition-duration="[transition-duration]">
 
 
 [content-token]
@@ -15,6 +15,8 @@
 
 </div>
 <script src="js/impress.js"></script>
-<script>impress().init();</script>
+<script>impress().init();
+[javascript-token]
+</script>
 </body>
 </html>
